--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "marko": "^3.0.0-alpha.2",
     "marko-widgets": "^6.0.0-alpha.1",
     "node-sass": "^3.4.2",
-    "request": "^2.69.0",
-    "validate.js": "^0.9.0"
+    "request": "^2.69.0"
   },
   "devDependencies": {
     "browser-refresh": "^1.4.10",
