Added updates for registration and forgot password

--- a/package.json
+++ b/package.json
@@ -16,17 +16,22 @@
   "author": "Terlici Ltd.",
   "license": "MIT",
   "dependencies": {
-    "app-module-path": "^1.0.5",
-    "body-parser": "^1.12.3",
+    "app-module-path": "^1.0.6",
+    "body-parser": "^1.15.0",
     "browser-refresh-taglib": "^1.0.4",
+    "dateformat": "^1.0.12",
+    "email-validator": "^1.0.4",
     "express": "^4.13.3",
-    "lasso": "^2.0.0",
-    "lasso-autoprefixer": "^1.0.3",
+    "form-data": "^0.2.0",
+    "lasso": "^2.1.5",
+    "lasso-autoprefixer": "^2.0.0",
     "lasso-imagemin": "^1.0.7",
+    "lasso-less": "^2.1.2",
     "lasso-marko": "^2.0.7",
     "lasso-sass": "^1.1.9",
-    "marko": "^3.0.0-alpha.2",
-    "marko-widgets": "^6.0.0-alpha.1",
+    "marko": "^3.0.3",
+    "marko-widgets": "^6.0.0",
+    "multer": "^1.1.0",
     "node-sass": "^3.4.2",
     "request": "^2.69.0"
   },
