--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "marko-widgets": "^6.0.0",
     "multer": "^1.1.0",
     "node-sass": "^3.4.2",
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "tough-cookie": "^2.2.2"
   },
   "devDependencies": {
     "browser-refresh": "^1.4.10",
